plugins/kotlin/idea/tests/testData/highlighterMetaInfoWithBundledCompilerPlugins/allOpen.kt.highlighting
// COMPILER_ARGUMENTS: -Xplugin=$TEST_DIR/allOpen_fake_plugin.jar -P plugin:org.jetbrains.kotlin.allopen:annotation=test.MyOpener
// FILE: main.kt
package test

<!HIGHLIGHTING("textAttributesKey='KOTLIN_BUILTIN_ANNOTATION'")!>annotation<!> class <!HIGHLIGHTING("textAttributesKey='KOTLIN_ANNOTATION'")!>MyOpener<!>

<!HIGHLIGHTING("textAttributesKey='KOTLIN_ANNOTATION'")!>@MyOpener<!>
class <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>BaseClass<!>

class <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>Child<!> : <!HIGHLIGHTING("textAttributesKey='KOTLIN_CONSTRUCTOR'")!>BaseClass<!>()
